2. Design Patterns/1. Creational/Factory/Examples/1. MyPizza/Bad/MyPizza_Bad/Program.cs
using System;
using System.Collections.Generic;
using System.Linq;
using System.Text;
using System.Threading.Tasks;

namespace MyPizza_Bad
{
    class Program
    {
        static void Main(string[] args)
        {
            var pizzaService = new PizzaService();
            var orderedPizza = pizzaService.Order("pepperoni");
            Console.WriteLine("Zamowiona pizza to: " + orderedPizza.GetType().Name);

            Console.ReadKey();
        }
    }
}
